# kraken_simulator

./: Readme
keyboard_control/: CMakeLists.txt  package.xml
keyboard_control/src/: keyboard.py  keyboard_control.cpp
keyboardcontrol/: CMakeLists.txt  package.xml
keyboardcontrol/src/: keyboard.py  keyboard_control.cpp
models/arena/: model.config  model.sdf
models/arena/meshes/: base_link.STL  bucket1.STL  bucket4.STL  line.STL  start.STL  validation_gate.STL
models/kraken/: model.config  model.sdf
models/kraken/meshes/: base_link.STL  bottom_camera.STL  front_camera.STL  thruster_depth_back.STL  thruster_depth_front.STL  thruster_surge_left.STL  thruster_surge_right.STL  thruster_sway_back.STL  thruster_sway_front.STL
models/lake/: model.sdf
models/pool/: model.config  model.sdf
models/pool/meshes/: pool_wall.STL  water.STL
msgs_stack/: CMakeLists.txt  package.xml
plugins/: CMakeLists.txt  package.xml
plugins/include/plugins/: BuoyancyPlugin.h  Hydrodynamics.h  KrakenControl.h
plugins/src/: BuoyancyPlugin.cpp  Hydrodynamics.cpp  KrakenControl.cpp  transformer.cpp
