<?xml version="1.0"?>
<package>
  <name>msgs_stack</name>
  <version>0.0.0</version>
  <description>msgs_stack package</description>

  <maintainer email="yash@todo.todo">yash</maintainer>

 <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>rospy</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>



 </package>
