<?xml version="1.0"?>
<package>
  <name>plugins</name>
  <version>0.0.0</version>
  <description>The plugins package</description>
  <maintainer email="yash@todo.todo">yash</maintainer>

  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>kraken_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <run_depend>geometry_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>kraken_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
</package>
